<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/asetukset_kayttoonotto">
        <Preference
            android:key="avaa_ime_asetukset"
            android:icon="@drawable/ic_keyboard"
            android:title="@string/ota_kayttoon"
            android:summary="@string/ota_kayttoon_kuvaus"
            app:singleLineTitle="false" />
        <Preference
            android:key="vaihda_nappaimisto"
            android:icon="@drawable/ic_swap"
            android:title="@string/vaihda_nappaimistoksi"
            android:summary="@string/vaihda_nappaimistoksi_kuvaus"
            app:singleLineTitle="false" />
        <Preference
            android:key="esittely"
            android:icon="@drawable/ic_lightbulb"
            android:title="@string/esittely"
            android:summary="@string/esittely_kuvaus"
            app:singleLineTitle="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/asetukset_ulkoasu">
        <SeekBarPreference
            android:key="korkeus"
            android:title="@string/asetus_korkeus"
            android:summary="@string/asetus_korkeus_kuvaus"
            android:defaultValue="100"
            android:max="130"
            app:min="80"
            app:singleLineTitle="false"
            app:showSeekBarValue="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/asetukset_kirjoittaminen">
        <SwitchPreferenceCompat
            android:key="aanet"
            android:icon="@drawable/ic_volume"
            android:title="@string/asetus_aanet"
            android:defaultValue="false"
            app:singleLineTitle="false" />
        <SwitchPreferenceCompat
            android:key="varina"
            android:icon="@drawable/ic_vibration"
            android:title="@string/asetus_varina"
            android:defaultValue="true"
            app:singleLineTitle="false" />
        <SwitchPreferenceCompat
            android:key="esikatselu"
            android:icon="@drawable/ic_visibility"
            android:title="@string/asetus_esikatselu"
            android:defaultValue="true"
            app:singleLineTitle="false" />
        <SwitchPreferenceCompat
            android:key="numerorivi"
            android:icon="@drawable/ic_keyboard"
            android:title="@string/asetus_numerorivi"
            android:summary="@string/asetus_numerorivi_kuvaus"
            android:defaultValue="true"
            app:singleLineTitle="false" />
        <SwitchPreferenceCompat
            android:key="kaksoisvali_piste"
            android:icon="@drawable/ic_space_bar"
            android:title="@string/asetus_kaksoisvali"
            android:summary="@string/asetus_kaksoisvali_kuvaus"
            android:defaultValue="true"
            app:singleLineTitle="false" />
        <Preference
            android:key="erikoismerkit"
            android:icon="@drawable/ic_tag"
            android:title="@string/erikoismerkit"
            android:summary="@string/erikoismerkit_kuvaus"
            app:singleLineTitle="false" />
        <Preference
            android:key="tyokalurivi"
            android:icon="@drawable/ic_tune"
            android:title="@string/tyokalurivi"
            android:summary="@string/tyokalurivi_kuvaus"
            app:singleLineTitle="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/asetukset_ehdotukset">
        <SwitchPreferenceCompat
            android:key="ehdotukset"
            android:icon="@drawable/ic_lightbulb"
            android:title="@string/asetus_ehdotukset"
            android:defaultValue="true"
            app:singleLineTitle="false" />
        <SwitchPreferenceCompat
            android:key="ehdotus_valilyonti"
            android:icon="@drawable/ic_space_bar"
            android:title="@string/asetus_ehdotus_valilyonti"
            android:defaultValue="true"
            app:singleLineTitle="false" />
        <SwitchPreferenceCompat
            android:key="ehdotus_yleiset"
            android:icon="@drawable/ic_book"
            android:title="@string/asetus_ehdotus_yleiset"
            android:defaultValue="true"
            app:singleLineTitle="false" />
        <SwitchPreferenceCompat
            android:key="automaattikorjaus"
            android:icon="@drawable/ic_spellcheck"
            android:title="@string/asetus_automaattikorjaus"
            android:summary="@string/asetus_automaattikorjaus_kuvaus"
            android:defaultValue="true"
            app:singleLineTitle="false" />
        <Preference
            android:key="opitut_sanat"
            android:icon="@drawable/ic_school"
            android:title="@string/opitut_sanat"
            android:summary="@string/opitut_sanat_kuvaus"
            app:singleLineTitle="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/asetukset_kaannos">
        <Preference
            android:key="kaannoskielet"
            android:icon="@drawable/ic_translate"
            android:title="@string/kaannoskielet"
            android:summary="@string/kaannoskielet_kuvaus"
            app:singleLineTitle="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/asetukset_sanelu">
        <SeekBarPreference
            android:key="sanelu_hiljaisuus"
            android:icon="@drawable/ic_mic"
            android:title="@string/asetus_sanelu_hiljaisuus"
            android:summary="@string/asetus_sanelu_hiljaisuus_kuvaus"
            android:defaultValue="5"
            android:max="10"
            app:min="2"
            app:singleLineTitle="false"
            app:showSeekBarValue="true" />
        <ListPreference
            android:key="sanelu_moottori"
            android:icon="@drawable/ic_mic"
            android:title="@string/asetus_sanelu_moottori"
            android:defaultValue="jarjestelma"
            android:entries="@array/sanelu_moottori_nimet"
            android:entryValues="@array/sanelu_moottori_arvot"
            app:singleLineTitle="false" />
        <Preference
            android:key="sanelu_malli"
            android:icon="@drawable/ic_sparkle"
            android:title="@string/asetus_sanelu_malli"
            app:singleLineTitle="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/asetukset_tekoaly">
        <ListPreference
            android:key="ai_palvelu"
            android:icon="@drawable/ic_sparkle"
            android:title="@string/asetus_ai_palvelu"
            android:entries="@array/ai_palvelu_nimet"
            android:entryValues="@array/ai_palvelu_arvot"
            android:defaultValue="claude"
            app:singleLineTitle="false" />
        <EditTextPreference
            android:key="claude_api_avain"
            android:icon="@drawable/ic_sparkle"
            android:title="@string/asetus_api_avain"
            android:summary="@string/asetus_api_avain_kuvaus"
            app:singleLineTitle="false" />
        <Preference
            android:key="claude_malli"
            android:icon="@drawable/ic_tune"
            android:title="@string/asetus_malli"
            app:singleLineTitle="false" />
        <EditTextPreference
            android:key="openai_api_avain"
            android:icon="@drawable/ic_sparkle"
            android:title="@string/asetus_openai_avain"
            android:summary="@string/asetus_openai_avain_kuvaus"
            app:singleLineTitle="false" />
        <Preference
            android:key="openai_malli"
            android:icon="@drawable/ic_tune"
            android:title="@string/asetus_openai_malli"
            app:singleLineTitle="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/asetukset_varmuuskopio">
        <Preference
            android:key="varmuuskopio_vie"
            android:icon="@drawable/ic_upload"
            android:title="@string/varmuuskopio_vie"
            android:summary="@string/varmuuskopio_vie_kuvaus"
            app:singleLineTitle="false" />
        <Preference
            android:key="varmuuskopio_tuo"
            android:icon="@drawable/ic_download"
            android:title="@string/varmuuskopio_tuo"
            android:summary="@string/varmuuskopio_tuo_kuvaus"
            app:singleLineTitle="false" />
    </PreferenceCategory>
</PreferenceScreen>
